--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=Alberto Gonzalez Balaguer
 maintainer=Alberto Gonzalez Balaguer <https://github.com/albertogonb>
 sentence=HOTP generator for ATmega32u4
 paragraph=HOTP generator for ATmega32u4
-Allows HOTP keys between 6 and 9 characters long, optionally terminated with <ENTER> or <TAB>.
+Allows HOTP keys between 6 and 9 characters long, optionally terminated with ENTER or TAB.
 The initial counter value can be set.
 The shared secret can be up to 32 characters.
 category=OTP
