--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,7 @@ version=1.0
 author=Alberto Gonzalez Balaguer
 maintainer=Alberto Gonzalez Balaguer <https://github.com/albertogonb>
 sentence=HOTP generator for ATmega32u4
-paragraph=HOTP generator for ATmega32u4
-Allows HOTP keys between 6 and 9 characters long, optionally terminated with ENTER or TAB.
+paragraph=Allows HOTP keys between 6 and 9 characters long, optionally terminated with ENTER or TAB.
 The initial counter value can be set.
 The shared secret can be up to 32 characters.
 category=OTP
